--- a/static/css/blog-styles.css
+++ b/static/css/blog-styles.css
@@ -1,3 +1,12 @@
+h2, h3 {
+  color: #343a40;
+}
+
+p {
+  font-size: 18px;
+  color: #4E595A;
+}
+
 .blog-content-container {
   display: flex;
   flex-direction: column;
