--- a/static/css/form.css
+++ b/static/css/form.css
@@ -37,6 +37,16 @@
 
 }
 
+h2, h3 {
+    color: #343a40;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #4E595A;
+}
+
 .form {
     display: flex;
     flex-direction: column;
