--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,6 +34,16 @@
 
 }
 
+h2 {
+    color: #343a40; /* Dark text color */
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #4E595A; /* Medium gray text color */
+}
+
 @media (max-width: 768px) {
     .alert {
         width: 100%; 
